add Kafka and Redis host parameters to run-flink-job.sh